06-Advanced-Operations-Automation/demos/m2-applicationsets/apps/globomantics-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: globomantics-web
spec:
  selector:
    app: globomantics-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
